# GlistApp

./: .clangd  CMakeLists.txt
_android/app/cpp/: CMakeLists.txt
src/: gCanvas.cpp  gCanvas.h  main.cpp
